--- a/README.qmd
+++ b/README.qmd
@@ -1,11 +1,13 @@
 ---
-
 title: "RL Feature Selection Pipeline"
-format:
-gfm:
 toc: true
 number-sections: true
----------------------
+format: gfm
+execute:
+  echo: true
+  warning: false
+  message: false
+---
 
 # Overview
 
